--- a/clusters/my-cluster/postgres.service.yml
+++ b/clusters/my-cluster/postgres.service.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: db
+  namespace: default
   labels:
     name: postgres-service
     app: demo-voting-app
