--- a/clusters/my-cluster/redis.service.yml
+++ b/clusters/my-cluster/redis.service.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis
+  namespace: default
   labels:
     name: redis-service
     app: demo-voting-app
