--- a/clusters/my-cluster/result-app.service.yml
+++ b/clusters/my-cluster/result-app.service.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: result-app-service
+  namespace: default
   labels:
     name: result-app-service
     app: demo-voting-app
